--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "stylelint-scss": "^3.3.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.1.14",
+    "workbox-webpack-plugin": "^3.6.3"
   }
 }
